--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
-    "@aresrpg/aresrpg-world": "file:../aresrpg-world",
+    "@aresrpg/aresrpg-world": "github:aresrpg/aresrpg-world",
     "n8ao": "^1.8.1",
     "solid-js": "^1.8.11",
     "three": "^0.161.0"
