--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "solid-devtools": "^0.29.2",
-    "vite": "^5.0.11",
+    "solid-devtools": "^0.29.3",
+    "vite": "^5.1.3",
     "vite-plugin-node-polyfills": "^0.21.0",
-    "vite-plugin-solid": "^2.8.2"
+    "vite-plugin-solid": "^2.10.1"
   },
   "dependencies": {
+    "@aresrpg/aresrpg-protocol": "^1.3.0",
     "@aresrpg/aresrpg-world": "github:aresrpg/aresrpg-world",
     "n8ao": "^1.8.1",
-    "solid-js": "^1.8.11",
+    "solid-js": "^1.8.15",
     "three": "^0.161.0"
   }
 }
